# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2023-02-15 Michael Truog   <mjtruog at protonmail dot com>

    * Add C/C++ CloudI API functions for service process constant value
      access before CloudI API initialization:
        * timeout_initialize
        * timeout_terminate
        * process_index
        * process_count_max
        * process_count_min
    * Add Erlang/OTP 26.0-rc1 support

2023-02-14 Michael Truog   <mjtruog at protonmail dot com>

    * Add bind service configuration option support for external service
      threads in the ATS, C/C++, Python/C CloudI API

2023-02-13 Michael Truog   <mjtruog at protonmail dot com>

    * Add the bind service configuration option to bind
      CloudI service Erlang pids to scheduler threads
      if the schduler threads are bound
      (external service OS pid threads don't have their
       affinity set yet based on the bind option)

2023-02-10 Michael Truog   <mjtruog at protonmail dot com>

    * Fix external service stdout/stderr logging when the
      stdout/stderr data is 16KiB without any newlines

2023-02-09 Michael Truog   <mjtruog at protonmail dot com>

    * Add CloudI Service API services_update pid options
      modifications for pids that are not restarted
      (info_pid_options when duo_mode == true and dispatcher_pid_options)

2023-02-08 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_service_api_requests representations of
      aspect function lists to ensure only literal functions are
      encoded as string data
      (in the erl/json response of logging and services)
    * Allow CloudI Service API services_update to change
      info_pid_options when duo_mode == true to be like dispatcher_pid_options
      (the change is only able to occur after a restart)
    * Add support for the new async_dist erlang:spawn_opt/2 option
    * Update uuid

2023-01-07 Michael Truog   <mjtruog at protonmail dot com>
